fix: fix style warnings